# OpsClaw

./: .dockerignore  .env.example  .gitignore  AGENT_IMPROVEMENT_PLAN.md  AGENT_IMPROVEMENT_PLAN_V2.md  CLAUDE.md  CODE_REVIEW_TASKS.md  Dockerfile  MEMORY_SYSTEM_FIX_SUMMARY.md  MEMORY_SYSTEM_IMPROVEMENT_SUMMARY.md  README.md  README_EN.md  README_ZH.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/core/: __init__.py  checkpointer.py  config.py  constants.py  deps.py  executor.py  feature_flags.py  integration_config.py  llm_factory.py  llm_providers.py  permission_checker.py  permissions.py  scheduler.py  security.py  state.py  tool_permission_mapper.py
app/deepagents/: __init__.py  component_cache.py  factory.py  main_agent.py
app/dspy/: __init__.py  llm_adapter.py
app/integrations/: __init__.py  http_client.py
app/memory/: USAGE_EXAMPLE.md  __init__.py  chroma_store.py  langgraph_store.py  mem0_adapter.py  memory_manager.py  query_expander.py  sqlite_fts_store.py  sqlite_memory_store.py  vector_store.py
app/middleware/: __init__.py  approval_middleware.py  base.py  context_compression_middleware.py  dynamic_approval_middleware.py  dynamic_permission_middleware.py  error_filtering_middleware.py  logging_middleware.py  memory_middleware.py  message_trimming_middleware.py  routing_middleware.py  security_middleware.py  store_memory_middleware.py
app/models/: __init__.py  agent_prompt.py  approval_config.py  audit_log.py  chat_message.py  chat_session.py  database.py  dspy_prompt.py  incident_knowledge.py  login_history.py  permission.py  role.py  role_permission.py  scheduled_task.py  subagent_prompt.py  system_setting.py  tool_metadata.py  user.py  user_role.py  workflow_execution.py
app/patterns/: __init__.py  reflector.py
app/prompts/: __init__.py  base.py  main_agent.py
app/schemas/: __init__.py  agent_prompt.py  chat.py  kubernetes_config.py  onboarding.py  rbac.py  scheduled_task.py  system_setting.py  user.py
app/services/: __init__.py  agent_chat_service.py  approval_config_service.py  approval_intent_service.py  chat_service.py  enhanced_analyze_service.py  enhanced_data_agent_service.py  enhanced_execute_service.py  enhanced_main_agent_service.py  message_deduplication.py  prompt_management.py  scheduler_service.py  session_lock_manager.py  session_state_manager.py  unified_prompt_optimizer.py
app/skills/: __init__.py
app/tools/: EXTENSION_GUIDE.md  EXTENSION_GUIDE_ZH.md  QUICK_REFERENCE.md  QUICK_REFERENCE_EN.md  QUICK_REFERENCE_ZH.md  __init__.py  alert_tools.py  base.py  fallback.py  (+9 more)
docker/: entrypoint.sh  nginx.conf  supervisord.conf
frontend/: .env.development  index.html  package-lock.json  package.json  test-scrollbar.html  tsconfig.json
scripts/: clean_web_sessions.py  init.py  init_vector_knowledge.py  install_skill.py  start_server.py
tests/: test_agent_wrapper.py  test_alert_tools.py  test_approval_middleware.py  test_imports.py  test_permission_middleware.py  test_security.py
(+168 files in other folders)
